Colaboratory를 통해 생성됨

--- a/_api_0321_.ipynb
+++ b/_api_0321_.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "19z7_KzuinUsZk05DoJOKYVqhcjAApKHt",
-      "authorship_tag": "ABX9TyODVf/a8LFfHQ0K0+vpb+jy",
+      "authorship_tag": "ABX9TyPlSmdUWV4Jlg++WJ9cAH08",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,10 +31,28 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "KSUN3In7TLVT"
+        "id": "KSUN3In7TLVT",
+        "outputId": "1f6f4598-3121-47b8-f687-b0fbd206ac7c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "https://ghp_tFdUWxV5910QDa9b9WVm1uuZSy8BA53gCFW3@github.com/whoawoo/api_class.git\n"
+          ]
+        }
+      ],
+      "source": [
+        "GIT_token = 'ghp_tFdUWxV5910QDa9b9WVm1uuZSy8BA53gCFW3'\n",
+        "GIT_username = 'whoawoo'\n",
+        "GIT_repo = 'api_class'\n",
+        "GIT_path = 'https://'+ GIT_token + '@github.com/' + GIT_username + '/' + GIT_repo +\".git\"\n",
+        "print(GIT_path)"
+      ]
     }
   ]
 }
